# quantity-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  dprint.json  flake.nix  justfile  rumdl.toml  rustfmt.toml
examples/: power.rs
quantities/: Cargo.toml
quantities-macros/: Cargo.toml
quantities-macros/src/: argument_parser.rs  error.rs  expand.rs  lib.rs
quantities-macros/tests/ui/: duplicate_argument.rs  duplicate_argument.stderr  missing_unit.rs  missing_unit.stderr  missing_unitvalue_impl.rs  missing_unitvalue_impl.stderr  regular_struct.rs  regular_struct.stderr  unknown_argument.rs  unknown_argument.stderr
quantities/examples/: power.rs
quantities/src/: common.rs  lib.rs
quantities/src/electricity/: current.rs  mod.rs  operations.rs  power.rs  voltage.rs
quantities/src/quantity/: current.rs  mod.rs  operations.rs  power.rs  voltage.rs
src/quantity/: common.rs  current.rs  operations.rs  power.rs  voltage.rs
