[package]
name = "quantities-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
derive_more = { version = "2.1.1", features = ["full"] }
proc-macro-crate = "3.4.0"
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.117", features = ['full'] }
thiserror = "2.0.18"

[dev-dependencies]
quantities = { workspace = true }
trybuild = "1.0.116"
[lints]
workspace = true
